# ctk-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: development_task.yaml
.github/workflows/: deploy.yaml  test.yaml
scripts/diagnoses/: markdown_to_json.py
src/ctk_api/: main.py
src/ctk_api/core/: config.py  core_utils.py  middleware.py  models.py  utils.py
src/ctk_api/data/: .gitignore  report_template.docx  report_template_closing_statement.docx  report_template_mental_status_examination.docx
src/ctk_api/microservices/: sql.py
src/ctk_api/routers/diagnoses/: controller.py  models.py  schemas.py  views.py
src/ctk_api/routers/file_conversion/: __init__.py  controller.py  views.py
src/ctk_api/routers/file_conversion/intake/: __init__.py  descriptors.py  docx_utils.py  parser.py  transformers.py  utils.py  writer.py
src/ctk_api/routers/file_conversion/intake/utils/: docx_utils.py  language_utils.py
src/ctk_api/routers/summarization/: anonymizer.py  controller.py  models.py  schemas.py  views.py
tests/: .test.env  conftest.py
tests/data/: find_replace_test.docx  test_redcap_data.csv
tests/endpoint/: conftest.py  test_diagnoses_endpoints.py  test_file_conversion_endpoints.py  test_summarization_endpoints.py
tests/integration/: conftest.py  test_diagnoses_endpoints.py  test_file_conversion_endpoints.py  test_summarization_endpoints.py
tests/smoke/: test_intake_writer_smoke.py
tests/unit/: test_anonymizer.py  test_intake_parser.py  test_intake_utils.py  test_intake_writer.py  test_middleware.py  test_parser.py  test_sql.py  test_transformers.py
